# Escape-from-TuxKov

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  extract.sh  gdb.sh  inject.sh  reload.sh  setuphooks.sh
.githooks/: post-merge-checkout  pre-commit
inputsystem/: README.md  main.cpp
src/: Interfaces.cpp  Interfaces.h  Main.cpp  Netvars.cpp  Netvars.h  Signatures.h  globals.h  utils.h
src/features/: Aimbot.cpp  Aimbot.h  Bhop.cpp  Bhop.h  DumbExploits.cpp  DumbExploits.h  Glow.cpp  Glow.h
src/hacks/: aimbot.cpp  aimbot.h  esp.cpp  esp.h  esp_loot.h  norecoil.cpp  norecoil.h
src/sdk/: BaseStruct.cpp  BaseStruct.h  CBaseEntity.h  CClientState.h  CGlobalVars.h  CInput.h  CUserCmd.h  ClientClass.h  Definitions.h  MapHeader.h  MetaAddressConverter.h  OffPtr.h  QAngle.h  SectionPointerConverter.h  UtlMemory.h  Vector.h  bf_write.h  mono.h  tarkov.h  unity.cpp  unity.h
src/sdk/tags/: TagBase.h  matg.h  weap.h
src/utils/: Handles.cpp  InputSystem.cpp  InputSystem.h  Logger.cpp  Logger.h  Math.h  Memutils.cpp  Memutils.h  Scanner.cpp  Scanner.h  Wrappers.h  memutils.h  minitrace.h
src/vmread/: intmem.c  wintools.c
src/vmread/hlapi/: hlapi.h
